  by David Savinkoff. (VRI)

2011-09-28
- bios/clock.c: Fixed wrong minutes in NVRAM's ndosettime(). (VRI)

2011-09-30
- cli/command.c: Fixed random crash when starting a program in EmuCON. (VRI)

2011-10-01
- bios/screen.c: Added debug trace on vsetmode(). (VRI)
- bios/nvram.c: The NVRAM checksum was checked only on the first call to
  nvmaccess(). Fixed. (VRI)
- bios/machine.c: Added debug traces for AKP and IDT cookies. (VRI)
- bios/screen.c: Always use the default video mode on the FireBee, until the
  VIDEL and vsetmode() are reliable. (VRI)

2011-10-03
- bios/machine.c bios/screen.c: Minor adjustments to ease next conditional
  compilation. (VRI)
- util/intmath.c include/intmath.h vdi_vdi_line.c: Moved Isqrt() to intmath.c
  since it is the right place for integer math. (VRI)
- doc/bugs.txt doc/todo.txt: Update to reflect current status. Contributed by
  Roger Burrows. (VRI)
- bdos/fs.h bdos/fsdir.h bdos/fsopnclo.c: Replace magic numbers for file
  attributes with #defines. Contributed by Roger Burrows. (VRI)

2011-10-05
- doc/fat16.txt: Add documentation for FAT16 filesystem code. Contributed by
  Roger Burrows. (VRI)
- bdos/gemerror.h bios/gemerror.h include/gemerror.h: Move gemerror.h from
  bios/ to include/ and remove gemerror.h from bdos/. Contributed by Roger
  Burrows. (VRI)
- po/es.po: Updated Spanish translation. Contributed by David Galvez. (VRI)

2011-10-06
- tools/bug.c: Removed unused variable. (VRI)
- Makefile: Fixed problems when switching between UNIQUE builds. (THH)

2011-10-08
- Makefile: The needcountry.tmp hack caused trouble on some build systems, such
  as Ubuntu. Replaced by a more robust phony target. (VRI)
- Makefile: Introduced the ROM_256 variable to specify the name of the 256 KB
  ROM and produce more meaningful message with make allbin. (VRI)
- Makefile: Introduced the ROM_192 variable to specify the name of the 192 KB
  ROM and produce more meaningful message with make all192. (VRI)